--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus soluta eius sequi, corrupti animi assumenda officiis odio, rem rerum quo qui perferendis ratione aperiam repudiandae, magni facilis neque sint! Vitae.</p>
+    
+    <p class="name">Raiyan</p>
 </body>
 </html>
